--- a/Resources/views/Rule/macros/actions.html.twig
+++ b/Resources/views/Rule/macros/actions.html.twig
@@ -1,10 +1,10 @@
 {% macro render() %}
     <div class="control-group">
-        <div class="control-label wrap"><label for="diamante_update_branch_form_name-uid-5613fbf9e1a98"
-                                               class="required">Name<em>*</em></label></div>
-        <div class="controls">
-            <input type="text" id="diamante_update_branch_form_name-uid-5613fbf9e1a98"
-                   name="diamante_update_branch_form[name]" required="required">
+        <div id="action-block">
+            <div id="list-action"></div>
+            <ul style="list-style-type: none">
+                <li><a id="add-rule-action" class="editable">Add new action</a></li>
+            </ul>
         </div>
     </div>
 {% endmacro %}
