--- a/src/Diamante/FrontBundle/Resources/views/ResetPassword/email/reset.txt.twig
+++ b/src/Diamante/FrontBundle/Resources/views/ResetPassword/email/reset.txt.twig
@@ -1,3 +1,3 @@
-We were told that you forgot your password. To restore your password click on link below
+Can’t remember your password? We are always here for you! You can restore your password by clicking the link below:
 
 {{ url('diamante_front') }}/#newpassword/{{ activation_hash }}
