Email templates have been updated

--- a/src/Diamante/UserBundle/Resources/views/Notification/Create/created.html.twig
+++ b/src/Diamante/UserBundle/Resources/views/Notification/Create/created.html.twig
@@ -24,7 +24,7 @@
                             </h1>
 
                             <p style="font-size: 16px; font-weight: 200; line-height: 20px;">
-                                Thank you for you request! We have created an account on our <a href="{{ get_portal_link() }}">support portal</a> for you so you can check the status of all tickets you submitted to DiamanteDesk.<br/>
+                                We have created account for you. You will be able to check the status of your support tickets on the <a href="{{ get_portal_link() }}">support portal</a>.<br/>
                                 Please create a new password before signing in to your account. <br/>
 
                                 Follow <a href="{{ get_password_reset_link(activation_hash) }}">this link</a> to proceed.
