--- a/src/Diamante/UserBundle/Resources/views/Notification/Create/created.txt.twig
+++ b/src/Diamante/UserBundle/Resources/views/Notification/Create/created.txt.twig
@@ -1,4 +1,4 @@
-Thank you for you request! We have created an account on our support portal - {{ get_portal_link() }} for you so you can check the status of all tickets you submitted to DiamanteDesk.
+ We have created an account for you. You will be able to check status of your support tickets on support portal - {{ get_portal_link() }}
 
 Please create a new password before signing in to your account.
 
