DIAM-1219: After login user is redirected to DiamanteDesk dashboard

--- a/src/Diamante/DistributionBundle/Resources/views/Process/Step/final.html.twig
+++ b/src/Diamante/DistributionBundle/Resources/views/Process/Step/final.html.twig
@@ -15,7 +15,7 @@
 </div>
 
 <div class="button-set">
-    <a href="{{ url('diamante_ticket_list') }}" class="button primary" target="_blank">{{ 'process.button.finish'|trans }}</a>
+    <a href="{{ url('oro_dashboard_view') }}" class="button primary" target="_blank">{{ 'process.button.finish'|trans }}</a>
 </div>
 {% endblock %}
 
