--- a/Resources/views/Rule/macros/actions.html.twig
+++ b/Resources/views/Rule/macros/actions.html.twig
@@ -7,4 +7,44 @@
             </ul>
         </div>
     </div>
+
+
+    <script type="text/template" id="item-action-view">
+        <span class="editable"><%= action %></span> notification by
+        <span class="editable"><%= property %></span> to
+        <span class="editable"><%= value %></span>
+    </script>
+
+    <script type="text/template" id="item-action-edit">
+        <div class="selector" style="width: 72px;">
+            <span>Send</span>
+            <select class="">
+                <option value="send">Send</option>
+            </select>
+        </div>
+        notification by
+        <div class="selector" style="width: 72px;">
+            <span>email</span>
+            <select class="">
+                <option value="email">email</option>
+            </select>
+        </div>
+        to
+        <div class="selector" style="width: 72px;">
+            <span>reporter</span>
+            <select class="">
+                <option value="reporter">reporter</option>
+            </select>
+        </div>
+    </script>
+
+    <script type="text/template" id="item-action">
+        <div class="view-action"></div>
+
+        <div class="edit-action x-hide"></div>
+
+        <span class="delete editable">delete</span>
+        <span class="save editable x-hide">save</span>
+        <span class="edit editable">edit</span>
+    </script>
 {% endmacro %}
