render conditions data from backend

--- a/Resources/views/Rule/macros/actions.html.twig
+++ b/Resources/views/Rule/macros/actions.html.twig
@@ -1,10 +1,11 @@
-{% macro render() %}
+{% macro render(form) %}
     <div class="control-group">
         <div id="action-block">
             <div id="list-action"></div>
             <ul style="list-style-type: none">
                 <li><a id="add-rule-action" class="editable">Add new action</a></li>
             </ul>
+            {{ form_row(form.actions) }}
         </div>
     </div>
 
