--- a/Resources/views/Rule/macros/general.html.twig
+++ b/Resources/views/Rule/macros/general.html.twig
@@ -1,10 +1,3 @@
-{% macro render() %}
-    <div class="control-group">
-        <div class="control-label wrap"><label for="diamante_update_branch_form_name-uid-5613fbf9e1a98"
-                                               class="required">Name<em>*</em></label></div>
-        <div class="controls">
-            <input type="text" id="diamante_update_branch_form_name-uid-5613fbf9e1a98"
-                   name="diamante_update_branch_form[name]" required="required">
-        </div>
-    </div>
+{% macro render(form) %}
+    {{ form_row(form.name) }}
 {% endmacro %}
